# GoIT_PyWeb_HW_6

./: pyproject.toml  university.db
