[tool.poetry]
name = "goit-pyweb-hw-6"
version = "0.1.0"
description = ""
authors = ["fyodor <fyodor.shevchenko@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_pyweb_hw_6"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
